apps/canary/version-1/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app-gate
  annotations:
    argocd.argoproj.io/sync-wave: '90'
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: app-gate
  template:
    metadata:
      labels:
        app: app-gate
        app.kubernetes.io/component: app
        app.kubernetes.io/name: canary
    spec:
      containers:
      - name: app-gate
        image: ybelval/rollouts-demo:green
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
        startupProbe: # sleep between 15 and 30 seconds
          exec:
            command:
              - bash
              - -c
              - |- 
                sleep $(( (RANDOM % 15) + 15 ))
          timeoutSeconds: 30
  strategy:
    canary:
      maxSurge: 25%
      maxUnavailable: 0
      steps:
      - setWeight: 90
      - pause: {duration: 10}
      - pause: {}
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app
  annotations:
    argocd.argoproj.io/sync-wave: '100'
spec:
  replicas: 10
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        app.kubernetes.io/component: app
        app.kubernetes.io/name: canary
    spec:
      containers:
        - name: app
          image: ybelval/rollouts-demo:green
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
          startupProbe: # sleep between 15 and 30 seconds
            exec:
              command:
                - bash
                - -c
                - |-
                  sleep $(( (RANDOM % 15) + 15 ))
            timeoutSeconds: 30
  strategy:
    canary:
      maxSurge: 25%
      maxUnavailable: 0
      steps:
        - setWeight: 10
        - setWeight: 90
